--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ log = "0.4"
 nix = { version = "0.28", features = ["user"] }
 serde = { version = "1", optional = true, default-features = false }
 tokio = { version = "1", features = ["signal"] }
+tokio-util = { version = "0.7", features = ["codec", "net", "rt"] }
 tower = "0.4"
