--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ hyper-util = "0.1"
 libc = "0.2"
 log = "0.4"
 nix = { version = "0.28", features = ["user"] }
-serde = { version = "1", optional = true, default-features = false }
+serde = { version = "1", optional = true, features = ["derive"] }
 tokio = { version = "1", features = ["signal"] }
 tokio-util = { version = "0.7", features = ["codec", "net", "rt"] }
 tower = "0.4"
